--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         body{
             height: 100vh;
             width: 100%;
-            background-image: url('/4142231.jpg');
+            background-image: url('./4142231.jpg');
             background-position: center;
             background-size: cover;
             background-attachment:fixed;
